# toumei

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
examples/: tray_check.c  tray_check.rs
include/: toumei.h
src/: capi.rs  error.rs  lib.rs  mode.rs
src/test/: mod.rs
