[package]
name = "toumei"
version = "1.0.0"
authors = ["kuvaus"] 
edition = "2024"

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "^0.6.0"
objc2-foundation = { version = "^0.3.0", default-features = false, features = [
    "std",
    "NSString",
    "NSDictionary",
    "NSUserDefaults",
] }

# Linux/BSD dependencies
[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
zbus = "^5.5.0"
zvariant = "^5.4.0"
gio = "^0.20.9"



# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "^0.59.0", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_SystemInformation", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp" ] }
windows = "^0.61.1"

