[package]
name = "toumei"
version = "1.0.0"
edition = "2024"
authors = ["kuvaus <22169537+kuvaus@users.noreply.github.com>"]
description = "Detects system tray transparency on macOS, Windows, and Linux"
license = "MIT"
repository = "https://github.com/kuvaus/toumei"
keywords = ["tray", "transparency", "system", "gui"]
categories = ["api-bindings", "gui"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.0"
objc2-foundation = { version = "0.3.0", default-features = false, features = [
    "std",
    "NSString",
    "NSDictionary",
    "NSUserDefaults",
] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
zbus = "5.5.0"
zvariant = "5.4.0"
gio = "0.20.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp"
] }
